Code refactoring, removed commented code, unused variables, classes, added some management classes